# otool_lvgl_idf_port

./: .gitignore  CMakeLists.txt  idf_component.yml
include/: otool_lvgl_port.h  otool_lvgl_port_disp.h  otool_lvgl_port_touch.h
src/: otool_lvgl_port.cpp  otool_lvgl_port_disp.cpp  otool_lvgl_port_touch.cpp
